Solved the caret not moving on android due to the keys not being 'Unidentified', also solved the scrolling up bug when the terminal grows past the height of the screen by moving the offscreen input element closer, but making it's opacity 0

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -13,14 +13,13 @@
 
     .mobileInput {
         position: absolute;
-        top: -2000px;
-        left: -2000px;
+        opacity: 0;
     }
 
     .lineText {
         display: inline;
         position: relative;
-        // top: -1px;
+        top: -1px;
         margin-left: 8px;
     }
 
@@ -48,28 +47,28 @@
         }
 
         @-moz-keyframes blink {
-            50% {
+            60% {
                 opacity: 0;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
             }
         }
         @-webkit-keyframes blink {
-            50% {
+            60% {
                 opacity: 0;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
             }
         }
         @-o-keyframes blink {
-            50% {
+            60% {
                 opacity: 0;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
             }
         }
         @keyframes blink {
-            50% {
+            60% {
                 opacity: 0;
                 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
                 filter: alpha(opacity=0);
